<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".DescriptionActivity">

    <TextView
        android:id="@+id/tv_titleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/descipcion"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_desDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_titleDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_statusDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_desDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_fechaDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_statusDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_costeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fechaDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnHecho"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_costeDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/black"
        android:onClick="hecho"
        android:text="@string/hechas" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHecho"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/black"
        android:onClick="borrar"
        android:text="@string/borrar" />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBorrar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/black"
        android:onClick="goBack"
        android:text="@string/atras" />


</RelativeLayout>